# find-chats-state-cursor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  benchmark_results.json  main.py  package.json  pyproject.toml  tsconfig.json
src/: extension.ts  migrate.ts  types.ts  utils.ts
src/cursor_org/: backup.py  cleanup.py  cli.py  collector.py  constants.py  errors.py  exporters.py  indexer.py  integration.py  list_ides_cmd.py  models.py  navigation.py  organizer.py  parser.py  parser_utils.py  renamer.py  search.py  stats.py  summary.py  validation.py
src/cursor_org/parsers/: __init__.py  base.py  claude_code_parser.py  cursor_parser.py
tests/: test_backup.py  test_backup_integration.py  test_claude_code_parser.py  test_cleanup.py  test_cli.py  test_collector.py  test_errors.py  test_export.py  test_indexer.py  test_integration.py  test_models_aits.py  test_navigation.py  test_parser.py  test_parser_aits.py  test_renamer.py  test_search.py  test_search_performance.py  test_stats.py  test_summary.py  test_validation.py
