[project]
name = "cursor-transcript-organizer"
version = "0.3.0"
description = "CLI tool to organize, search, analyze, and export Cursor chat transcripts with rich metadata extraction and AITS v1.0 compliance"
authors = [
    {name = "drhiidden"},
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0.0",
]
requires-python = ">=3.10"

[project.scripts]
cursor-org = "cursor_org.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cursor_org"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
